--- a/src/styles/Porta.module.css
+++ b/src/styles/Porta.module.css
@@ -4,8 +4,8 @@
     align-items: center;
     padding: 15px;
 
-    width: 200px;
-    height: 310px;
+    width: var(--area-porta-largura);
+    height: var(--area-porta-altura);
     background-color: chocolate;
 }
 
