--- a/src/styles/Porta.module.css
+++ b/src/styles/Porta.module.css
@@ -1,8 +1,12 @@
 .area {
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
+
     width: var(--area-porta-largura);
-    height: var(--area-porta-altura);  
+    height: var(--area-porta-altura);
+
+    margin: 5px;
 }
 
 .estrutura {
@@ -12,6 +16,8 @@
     border-left: 5px solid brown;
     border-top: 5px solid brown;
     border-right: 5px solid brown;
+
+    width: 90%;
 }
 
 .porta {
@@ -25,4 +31,10 @@
 
 .numero {
     font-size: 3rem;
+}
+
+.chao {
+    height: 10px;
+    width: 100%;
+    background-color: #ddd;
 }
