--- a/src/styles/Porta.module.css
+++ b/src/styles/Porta.module.css
@@ -1,4 +1,6 @@
 .area {
+    position: relative;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,6 +33,18 @@
 
 .numero {
     font-size: 3rem;
+}
+
+.macaneta {
+    align-self: flex-start;
+
+    height: 20px;
+    width: 20px;
+    border-radius: 10px;
+    background-color: brown;
+
+    position: absolute;
+    top: calc(0.45 * var(--area-porta-altura));
 }
 
 .chao {
