--- a/src/styles/Formulario.module.css
+++ b/src/styles/Formulario.module.css
@@ -1,10 +1,15 @@
 .formulario {
     display: flex;
+    flex-direction: column;
 
     justify-content: center;
     align-items: center;
 
     height: 100vh;
+}
+
+.formulario > div {
+    display: flex;
 }
 
 .link {
